Macro's voor de labels.

--- a/report/img/initialGrid.tex
+++ b/report/img/initialGrid.tex
@@ -8,6 +8,10 @@
 % \definecolor{myred}{RGB}{175,53,71}
 % \definecolor{myblue}{RGB}{0,116,188}
 
+
+\newcommand{\freeParticle}[1]{\ensuremath{v_{#1}}}
+\newcommand{\fixedParticle}[1]{\ensuremath{f_{#1}}}
+
 \tikzset{
 		edgeStyle/.style = {line width = 1.3pt},
 		fixed/.style = 		 {anchor=base,fill,circle,inner sep=1pt},
@@ -19,7 +23,6 @@
 	
 \begin{tikzpicture}
   \newcommand\numFreeRowsCols{3}
-
   {
     \pgfmathtruncatemacro{\numRowsCols}{\numFreeRowsCols - 1}
     \pgfmathtruncatemacro{\numRowsColsMinusOne}{\numRowsCols - 1}
@@ -28,7 +31,7 @@
     \foreach \x in {0,...,\numRowsCols}
       \foreach \y in {0,...,\numRowsCols} 
          {\pgfmathtruncatemacro{\label}{\x - 3 *  \y + 7 - 1}
-         \node [free]  (\x\y) at (1.5*\x,1.5*\y) {$v_\label$};} 
+         \node [free]  (\x\y) at (1.5*\x,1.5*\y) {\freeParticle{\label}};} 
 
     % Draw edges between free particles in grid
     \foreach \x in {0,...,\numRowsCols}
@@ -42,7 +45,7 @@
       \foreach \x in {0,...,\numRowsCols}
       {
         \pgfmathtruncatemacro{\label}{\x}
-          \node [fixed] (\x\y) [label=above:{$f_\label$}] at (1.5*\x,1.5*\y) {};
+          \node [fixed] (\x\y) [label=above:{\fixedParticle{\label}}] at (1.5*\x,1.5*\y) {};
           \draw (\x\y)--(\x\yi);
       }
     }
@@ -54,7 +57,7 @@
       \foreach \x in {0,...,\numRowsCols}
       {
         \pgfmathtruncatemacro{\label}{\numFreeRowsCols * 3 + \x}
-        \node [fixed] (\x\y) [label=below:{$f_{\label}$}] at (1.5*\x,1.5*\y) {}; 
+        \node [fixed] (\x\y) [label=below:{\fixedParticle{\label}}] at (1.5*\x,1.5*\y) {}; 
         \draw (\x\y)--(\x\yi);
       } 
     }
@@ -66,7 +69,7 @@
       \foreach \y in {0,...,\numRowsCols}
       {
         \pgfmathtruncatemacro{\label}{(2 * \numFreeRowsCols - 1) - \y}
-        \node [fixed] (\x\y) [label=left:{$f_{\label}$}] at (1.5*\x,1.5*\y) {}; 
+        \node [fixed] (\x\y) [label=left:{\fixedParticle{\label}}] at (1.5*\x,1.5*\y) {}; 
         \draw (\x\y)--(\xi\y);
       } 
     }
@@ -78,7 +81,7 @@
       \foreach \y in {0,...,\numRowsCols}
       {
         \pgfmathtruncatemacro{\label}{(3 * \numFreeRowsCols - 1) - \y}
-        \node [fixed] (\x\y) [label=right:{$f_{\label}$}] at (1.5*\x,1.5*\y) {}; 
+        \node [fixed] (\x\y) [label=right:{\fixedParticle{\label}}] at (1.5*\x,1.5*\y) {}; 
         \draw (\x\y)--(\xi\y);
       } 
     }    
