--- a/report/img/initialGrid.tex
+++ b/report/img/initialGrid.tex
@@ -14,12 +14,12 @@
 \newcommand{\spring}[1]{\ensuremath{k_{#1}}}
 
 \newcommand\numFreeRowsCols{3}
-\newcommand\gridSpacing{2}
+\newcommand\gridSpacing{1.6}
 
 \tikzset{
 		edgeStyle/.style = {line width = 1.3pt},
-		fixed/.style = 		 {anchor=base,fill,circle,inner sep=1pt},
-		free/.style =	     {circle,draw},
+		fixed/.style = 		 {anchor=base,fill,circle,inner sep=1.5pt},
+		free/.style =	     {circle,draw, inner sep = 1pt},
     spring/.style =    {fill=white,circle,inner sep = 0.1pt, anchor=center, midway},
 		node distance=2.3cm
 }
