--- a/report/img/initialGrid.tex
+++ b/report/img/initialGrid.tex
@@ -24,36 +24,8 @@
 		node distance=2.3cm
 }
 
-\begin{document}
-	
-\begin{tikzpicture}
-  {
-    \pgfmathtruncatemacro{\numRowsCols}{\numFreeRowsCols - 1}
-    \pgfmathtruncatemacro{\numRowsColsMinusOne}{\numRowsCols - 1}
-
-    % Draw free particles on grid
-    \foreach \x in {0,...,\numRowsCols}
-      \foreach \y in {0,...,\numRowsCols} 
-         {\pgfmathtruncatemacro{\label}{\x - 3 *  \y + 7 - 1}
-         \node [free]  (\x\y) at (\gridSpacing*\x,\gridSpacing*\y) {\freeParticle{\label}};} 
-
-    % Draw edges between free particles in grid
-    \foreach \x in {0,...,\numRowsCols}
-      \foreach \y [count=\yi] in {0,...,\numRowsColsMinusOne}  {
-          % Vertical springs
-          \pgfmathtruncatemacro{\label}{\x + \numFreeRowsCols * (\numFreeRowsCols - 1 - \y) + (\numFreeRowsCols + 1) * (\numFreeRowsCols - 1 - \y)}{
-            \draw (\x\y)--(\x\yi) node[spring] {\spring{\label}};
-          }
-
-          % Horizontal springs
-          \pgfmathtruncatemacro{\label}{\y + (\numFreeRowsCols - 1) * (\numFreeRowsCols - 1 - \x) + (\numFreeRowsCols - \x) * (\numFreeRowsCols + 2) - 1}{
-            \draw (\y\x)--(\yi\x) node[spring] {\spring{\label}};
-          }
-          
-      }
-
-
-    % Draw upper row of fixed nodes
+\newcommand{\drawFixedParticles}{
+      % Draw upper row of fixed nodes
     {
       \newcommand\y{\numFreeRowsCols}  
       \pgfmathtruncatemacro{\yi}{\y - 1}
@@ -103,7 +75,38 @@
         \node [fixed] (\x\y) [label=right:{\fixedParticle{\label}}] at (\gridSpacing*\x,\gridSpacing*\y) {}; 
         \draw (\x\y)--(\xi\y) node[spring] {\spring{\springlabel}};
       } 
-    }      
+    }
+}
+
+\begin{document}
+	
+\begin{tikzpicture}
+  {
+    \pgfmathtruncatemacro{\numRowsCols}{\numFreeRowsCols - 1}
+    \pgfmathtruncatemacro{\numRowsColsMinusOne}{\numRowsCols - 1}
+
+    % Draw free particles on grid
+    \foreach \x in {0,...,\numRowsCols}
+      \foreach \y in {0,...,\numRowsCols} 
+         {\pgfmathtruncatemacro{\label}{\x - 3 *  \y + 7 - 1}
+         \node [free]  (\x\y) at (\gridSpacing*\x,\gridSpacing*\y) {\freeParticle{\label}};} 
+
+    % Draw edges between free particles in grid
+    \foreach \x in {0,...,\numRowsCols}
+      \foreach \y [count=\yi] in {0,...,\numRowsColsMinusOne}  {
+          % Vertical springs
+          \pgfmathtruncatemacro{\label}{\x + \numFreeRowsCols * (\numFreeRowsCols - 1 - \y) + (\numFreeRowsCols + 1) * (\numFreeRowsCols - 1 - \y)}{
+            \draw (\x\y)--(\x\yi) node[spring] {\spring{\label}};
+          }
+
+          % Horizontal springs
+          \pgfmathtruncatemacro{\label}{\y + (\numFreeRowsCols - 1) * (\numFreeRowsCols - 1 - \x) + (\numFreeRowsCols - \x) * (\numFreeRowsCols + 2) - 1}{
+            \draw (\y\x)--(\yi\x) node[spring] {\spring{\label}};
+          }
+          
+      }
+
+      \drawFixedParticles      
   }
 
   
