--- a/report/img/initialGrid.tex
+++ b/report/img/initialGrid.tex
@@ -24,10 +24,10 @@
 		node distance=2.3cm
 }
 
-\newcommand{\drawFixedParticles}{
+\newcommand{\drawFixedParticles}[1]{
       % Draw upper row of fixed nodes
     {
-      \newcommand\y{\numFreeRowsCols}  
+      \newcommand\y{#1}  
       \pgfmathtruncatemacro{\yi}{\y - 1}
       \foreach \x in {0,...,\numRowsCols}
       {
@@ -44,8 +44,8 @@
       \pgfmathtruncatemacro{\yi}{\y + 1}
       \foreach \x in {0,...,\numRowsCols}
       {
-        \pgfmathtruncatemacro{\label}{\numFreeRowsCols * 3 + \x}
-        \pgfmathtruncatemacro{\springlabel}{\x + \numFreeRowsCols * (\numFreeRowsCols - 1 - \y) + (\numFreeRowsCols + 1) * (\numFreeRowsCols - 1 - \y)}
+        \pgfmathtruncatemacro{\label}{#1 * 3 + \x}
+        \pgfmathtruncatemacro{\springlabel}{\x + #1 * (#1 - 1 - \y) + (#1 + 1) * (#1 - 1 - \y)}
         \node [fixed] (\x\y) [label=below:{\fixedParticle{\label}}] at (\gridSpacing*\x,\gridSpacing*\y) {}; 
         \draw (\x\y)--(\x\yi) node[spring] {\spring{\springlabel}};
       } 
@@ -57,8 +57,8 @@
       \pgfmathtruncatemacro{\xi}{\x + 1}
       \foreach \y in {0,...,\numRowsCols}
       {
-        \pgfmathtruncatemacro{\label}{(2 * \numFreeRowsCols - 1) - \y}
-        \pgfmathtruncatemacro{\springlabel}{\numFreeRowsCols + (\numFreeRowsCols - \y - 1) * ((2 * \numFreeRowsCols) + 1)}        
+        \pgfmathtruncatemacro{\label}{(2 * #1 - 1) - \y}
+        \pgfmathtruncatemacro{\springlabel}{#1 + (#1 - \y - 1) * ((2 * #1) + 1)}        
         \node [fixed] (\x\y) [label=left:{\fixedParticle{\label}}] at (\gridSpacing*\x,\gridSpacing*\y) {}; 
         \draw (\x\y)--(\xi\y) node[spring] {\spring{\springlabel}};
       } 
@@ -66,12 +66,12 @@
 
     %Draw right column of fixed nodes
     {
-      \newcommand\x{\numFreeRowsCols}  
+      \newcommand\x{#1}  
       \pgfmathtruncatemacro{\xi}{\x - 1}
       \foreach \y in {0,...,\numRowsCols}
       {
-        \pgfmathtruncatemacro{\label}{(3 * \numFreeRowsCols - 1) - \y}
-        \pgfmathtruncatemacro{\springlabel}{2 * \numFreeRowsCols + (\numFreeRowsCols - \y - 1) * ((2 * \numFreeRowsCols) + 1)}
+        \pgfmathtruncatemacro{\label}{(3 * #1 - 1) - \y}
+        \pgfmathtruncatemacro{\springlabel}{2 * #1 + (#1 - \y - 1) * ((2 * #1) + 1)}
         \node [fixed] (\x\y) [label=right:{\fixedParticle{\label}}] at (\gridSpacing*\x,\gridSpacing*\y) {}; 
         \draw (\x\y)--(\xi\y) node[spring] {\spring{\springlabel}};
       } 
@@ -106,7 +106,7 @@
           
       }
 
-      \drawFixedParticles      
+      \drawFixedParticles{\numFreeRowsCols}      
   }
 
   
