--- a/report/ics.sty
+++ b/report/ics.sty
@@ -21,6 +21,11 @@
 		node distance=2.3cm
 }
 
+% source destination name
+\newcommand{\drawSpring}[3]{
+  \draw (#1)--(#2) node[spring] {\spring{#3}};  
+}
+
 \newcommand{\drawFixedParticles}[2]{
   {
       % Draw upper row of fixed nodes
@@ -136,7 +141,7 @@
   \end{tikzpicture}	%
 }
 
-\newcommand{\cutGrid}{
+\newcommand{\cutGridOld}{
 	\pgfmathsetseed{1138}
 	\begin{tikzpicture}
   	{
@@ -152,7 +157,7 @@
     	\draw (12)--(11) node[spring] {\spring{8}};
     	\draw (22)--(21) node[spring] {\spring{9}};
 
-    	\draw (01)--(11) node[spring] {\spring{11}};
+    	% \draw (01)--(11) node[spring] {\spring{11}};
     	\draw (11)--(21) node[spring] {\spring{12}};
 
     	\draw (01)--(00) node[spring] {\spring{14}};
@@ -160,10 +165,30 @@
     	\draw (21)--(20) node[spring] {\spring{16}};
 
 		\draw (00)--(10) node[spring] {\spring{18}};
-    	\draw (10)--(20) node[spring] {\spring{19}};
+    	% \draw (10)--(20) node[spring] {\spring{19}};
 
 
     	\drawFixedParticles{\numFreeRowsCols}{\gridSpacing}      
+  }	
+  \end{tikzpicture}	%
+}
+
+\newcommand{\cutGrid}{
+	\pgfmathsetseed{1138}
+	\begin{tikzpicture}
+  	{
+    	\pgfmathtruncatemacro{\numRowsCols}{\numFreeRowsCols - 1}
+    	\pgfmathtruncatemacro{\numRowsColsMinusOne}{\numRowsCols - 1}
+
+    	\textbf{Cut grid}
+
+
+
+    	% \drawFreeParticles{-0.5}{0.5}
+
+    	% \drawSpringsBetweenFreeParticles
+
+    	% \drawFixedParticles{\numFreeRowsCols}{\gridSpacing}      
   }	
   \end{tikzpicture}	%
 }
