--- a/report/ics.sty
+++ b/report/ics.sty
@@ -37,7 +37,7 @@
         \pgfmathtruncatemacro{\label}{\x}
         \pgfmathtruncatemacro{\springlabel}{\x}
         \node [fixed] (\x\y) [label=above:{\fixedParticle{\label}}] at (#2 *\x,#2 *\y) {};
-        \draw (\x\y)--(\x\yi) node[spring] {\spring{\springlabel}};
+        \drawSpring{\x\y}{\x\yi}{\springlabel}
       }
     }
 
@@ -50,7 +50,7 @@
         \pgfmathtruncatemacro{\label}{#1 * 3 + \x}
         \pgfmathtruncatemacro{\springlabel}{\x + #1 * (#1 - 1 - \y) + (#1 + 1) * (#1 - 1 - \y)}
         \node [fixed] (\x\y) [label=below:{\fixedParticle{\label}}] at (#2 *\x,#2 *\y) {}; 
-        \draw (\x\y)--(\x\yi) node[spring] {\spring{\springlabel}};
+        \drawSpring{\x\y}{\x\yi}{\springlabel}
       } 
     }
 
@@ -63,7 +63,7 @@
         \pgfmathtruncatemacro{\label}{(2 * #1 - 1) - \y}
         \pgfmathtruncatemacro{\springlabel}{#1 + (#1 - \y - 1) * ((2 * #1) + 1)}        
         \node [fixed] (\x\y) [label=left:{\fixedParticle{\label}}] at (#2 *\x,#2 *\y) {}; 
-        \draw (\x\y)--(\xi\y) node[spring] {\spring{\springlabel}};
+        \drawSpring{\x\y}{\xi\y}{\springlabel}
       } 
     }
 
@@ -76,7 +76,7 @@
         \pgfmathtruncatemacro{\label}{(3 * #1 - 1) - \y}
         \pgfmathtruncatemacro{\springlabel}{2 * #1 + (#1 - \y - 1) * ((2 * #1) + 1)}
         \node [fixed] (\x\y) [label=right:{\fixedParticle{\label}}] at (#2 *\x,#2 *\y) {}; 
-        \draw (\x\y)--(\xi\y) node[spring] {\spring{\springlabel}};
+        \drawSpring{\x\y}{\xi\y}{\springlabel}
       } 
     }
   }
@@ -87,12 +87,12 @@
       \foreach \y [count=\yi] in {0,...,\numRowsColsMinusOne}  {
           % Vertical springs
           \pgfmathtruncatemacro{\label}{\x + \numFreeRowsCols * (\numFreeRowsCols - 1 - \y) + (\numFreeRowsCols + 1) * (\numFreeRowsCols - 1 - \y)}{
-            \draw (\x\y)--(\x\yi) node[spring] {\spring{\label}};
+            \drawSpring{\x\y}{\x\yi}{\label}
           }
 
           % Horizontal springs
           \pgfmathtruncatemacro{\label}{\y + (\numFreeRowsCols - 1) * (\numFreeRowsCols - 1 - \x) + (\numFreeRowsCols - \x) * (\numFreeRowsCols + 2) - 1}{
-            \draw (\y\x)--(\yi\x) node[spring] {\spring{\label}};
+            \drawSpring{\y\x}{\yi\x}{\label}
           }
           
       }
@@ -139,6 +139,22 @@
     	\drawFixedParticles{\numFreeRowsCols}{\gridSpacing}      
   }	
   \end{tikzpicture}	%
+}
+
+\newcommand{\drawSpringsBetweenFreeParticleCond}{
+       \foreach \x in {0,...,\numRowsCols}
+      \foreach \y [count=\yi] in {0,...,\numRowsColsMinusOne}  {
+          % Vertical springs
+          \pgfmathtruncatemacro{\label}{\x + \numFreeRowsCols * (\numFreeRowsCols - 1 - \y) + (\numFreeRowsCols + 1) * (\numFreeRowsCols - 1 - \y)}{
+            \draw (\x\y)--(\x\yi) node[spring] {\spring{\label}};
+          }
+
+          % Horizontal springs
+          \pgfmathtruncatemacro{\label}{\y + (\numFreeRowsCols - 1) * (\numFreeRowsCols - 1 - \x) + (\numFreeRowsCols - \x) * (\numFreeRowsCols + 2) - 1}{
+            \draw (\y\x)--(\yi\x) node[spring] {\spring{\label}};
+          }
+          
+      } 
 }
 
 \newcommand{\cutGridOld}{
