--- a/report/ics.sty
+++ b/report/ics.sty
@@ -159,6 +159,62 @@
       } 
 }
 
+\newcommand{\drawFixedParticlesCond}[3]{
+  {
+      % Draw upper row of fixed nodes
+    {
+      \newcommand\y{#1}  
+      \pgfmathtruncatemacro{\yi}{\y - 1}
+      \foreach \x in {0,...,\numRowsCols}
+      {
+        \pgfmathtruncatemacro{\label}{\x}
+        \pgfmathtruncatemacro{\springlabel}{\x}
+        \node [fixed] (\x\y) [label=above:{\fixedParticle{\label}}] at (#2 *\x,#2 *\y) {};
+        \drawSpringCond{\x\y}{\x\yi}{\springlabel}{#3}
+      }
+    }
+
+    % Draw lower row of fixed nodes
+    {
+      \newcommand\y{-1}  
+      \pgfmathtruncatemacro{\yi}{\y + 1}
+      \foreach \x in {0,...,\numRowsCols}
+      {
+        \pgfmathtruncatemacro{\label}{#1 * 3 + \x}
+        \pgfmathtruncatemacro{\springlabel}{\x + #1 * (#1 - 1 - \y) + (#1 + 1) * (#1 - 1 - \y)}
+        \node [fixed] (\x\y) [label=below:{\fixedParticle{\label}}] at (#2 *\x,#2 *\y) {}; 
+        \drawSpringCond{\x\y}{\x\yi}{\springlabel}{#3}
+      } 
+    }
+
+    % Draw left column of fixed nodes
+    {
+      \newcommand\x{-1}  
+      \pgfmathtruncatemacro{\xi}{\x + 1}
+      \foreach \y in {0,...,\numRowsCols}
+      {
+        \pgfmathtruncatemacro{\label}{(2 * #1 - 1) - \y}
+        \pgfmathtruncatemacro{\springlabel}{#1 + (#1 - \y - 1) * ((2 * #1) + 1)}        
+        \node [fixed] (\x\y) [label=left:{\fixedParticle{\label}}] at (#2 *\x,#2 *\y) {}; 
+        \drawSpringCond{\x\y}{\xi\y}{\springlabel}{#3}
+      } 
+    }
+
+    %Draw right column of fixed nodes
+    {
+      \newcommand\x{#1}  
+      \pgfmathtruncatemacro{\xi}{\x - 1}
+      \foreach \y in {0,...,\numRowsCols}
+      {
+        \pgfmathtruncatemacro{\label}{(3 * #1 - 1) - \y}
+        \pgfmathtruncatemacro{\springlabel}{2 * #1 + (#1 - \y - 1) * ((2 * #1) + 1)}
+        \node [fixed] (\x\y) [label=right:{\fixedParticle{\label}}] at (#2 *\x,#2 *\y) {}; 
+        \drawSpringCond{\x\y}{\xi\y}{\springlabel}{#3}
+      } 
+    }
+  }
+}
+
 \newcommand{\cutGridOld}{
 	\pgfmathsetseed{1138}
 	\begin{tikzpicture}
