--- a/report/ics.sty
+++ b/report/ics.sty
@@ -13,6 +13,15 @@
 \newcommand\numFreeRowsCols{3}
 \newcommand\gridSpacing{1.6}
 
+% The springs that should not be cut
+\def\stillExistingSprings{
+  0, 1, 2, 3, 4, 
+  5, 6, 7, 8, 9, 
+  10, 11, 12, 13, 14, 
+  15, 16, 17, 18, 19, 
+  20, 21, 22, 23}
+
+
 \tikzset{
 		edgeStyle/.style = {line width = 1.3pt},
 		fixed/.style = 		 {anchor=base,fill,circle,inner sep=1.5pt},
@@ -24,6 +33,15 @@
 % source destination name
 \newcommand{\drawSpring}[3]{
   \draw (#1)--(#2) node[spring] {\spring{#3}};  
+}
+
+% source destination name set
+\newcommand{\drawSpringCond}[4]{
+  \foreach \name in #4{
+    \ifthenelse{\equal{\name}{#3}}
+           {\drawSpring{#1}{#2}{#3}}
+           {} %do nothing
+  }
 }
 
 \newcommand{\drawFixedParticles}[2]{
@@ -248,21 +266,15 @@
 }
 
 \newcommand{\cutGrid}{
-	\pgfmathsetseed{1138}
+  \pgfmathsetseed{1138}
 	\begin{tikzpicture}
-  	{
-    	\pgfmathtruncatemacro{\numRowsCols}{\numFreeRowsCols - 1}
-    	\pgfmathtruncatemacro{\numRowsColsMinusOne}{\numRowsCols - 1}
+  {
+    \pgfmathtruncatemacro{\numRowsCols}{\numFreeRowsCols - 1}
+    \pgfmathtruncatemacro{\numRowsColsMinusOne}{\numRowsCols - 1}
 
-    	\textbf{Cut grid}
-
-
-
-    	% \drawFreeParticles{-0.5}{0.5}
-
-    	% \drawSpringsBetweenFreeParticles
-
-    	% \drawFixedParticles{\numFreeRowsCols}{\gridSpacing}      
+    \drawFreeParticles{-0.5}{0.5}
+    \drawFixedParticlesCond{\numFreeRowsCols}{\gridSpacing}{\stillExistingSprings}
+    \drawSpringsBetweenFreeParticleCond{\stillExistingSprings}
   }	
   \end{tikzpicture}	%
 }
