The grids are completed.

--- a/report/ics.sty
+++ b/report/ics.sty
@@ -253,17 +253,44 @@
     \pgfmathtruncatemacro{\numRowsCols}{\numFreeRowsCols - 1}
     \pgfmathtruncatemacro{\numRowsColsMinusOne}{\numRowsCols - 1}
 
-    \node [free]  (00) at (\gridSpacing * 0, \gridSpacing * 0) {\freeParticle{6}};
-    \node [free]  (10) at (\gridSpacing * 1, \gridSpacing * 0) {\freeParticle{7}};
-    \node [free]  (20) at (\gridSpacing * 2, \gridSpacing * 0) {\freeParticle{8}};
+  \node [free]  (00) at (
+    \gridSpacing * 0 - 0.5, 
+    \gridSpacing * 0 - 0.43
+  ) {\freeParticle{6}};
+  \node [free]  (10) at (
+    \gridSpacing * 1 - 0.27, 
+    \gridSpacing * 0 - 0.18
+  ) {\freeParticle{7}};
+  \node [free]  (20) at (
+    \gridSpacing * 2 + 0.34, 
+    \gridSpacing * 0 - 0.4
+  ) {\freeParticle{8}};
 
-    \node [free]  (01) at (\gridSpacing * 0, \gridSpacing * 1) {\freeParticle{3}};
-    \node [free]  (11) at (\gridSpacing * 1, \gridSpacing * 1) {\freeParticle{4}};
-    \node [free]  (21) at (\gridSpacing * 2, \gridSpacing * 1) {\freeParticle{5}};
-        
-    \node [free]  (02) at (\gridSpacing * 0, \gridSpacing * 2) {\freeParticle{0}};
-    \node [free]  (12) at (\gridSpacing * 1, \gridSpacing * 2) {\freeParticle{1}};
-    \node [free]  (22) at (\gridSpacing * 2, \gridSpacing * 2) {\freeParticle{2}};
+  \node [free]  (01) at (
+    \gridSpacing * 0 + 0.15, 
+    \gridSpacing * 1 + 0.45
+  ) {\freeParticle{3}};
+  \node [free]  (11) at (
+    \gridSpacing * 1 - 0.2, 
+    \gridSpacing * 1 + 0.16
+  ) {\freeParticle{4}};
+  \node [free]  (21) at (
+    \gridSpacing * 2 + 0.6, 
+    \gridSpacing * 1 - 0.15
+  ) {\freeParticle{5}};
+    
+  \node [free]  (02) at (
+    \gridSpacing * 0 - 0.1, 
+    \gridSpacing * 2 - 0.25
+  ) {\freeParticle{0}};
+  \node [free]  (12) at (
+    \gridSpacing * 1 - 0.13, 
+    \gridSpacing * 2 + 0.18
+  ) {\freeParticle{1}};
+  \node [free]  (22) at (
+    \gridSpacing * 2 - 0.12, 
+    \gridSpacing * 2 - 0.33
+  ) {\freeParticle{2}};
 
     \drawFixedParticlesCond{\numFreeRowsCols}{\gridSpacing}{\stillExistingSprings}
     \drawSpringsBetweenFreeParticleCond{\stillExistingSprings}
