Completed the images

--- a/report/ics.sty
+++ b/report/ics.sty
@@ -4,6 +4,12 @@
 \usetikzlibrary{positioning}
 \usetikzlibrary{calc}
 
+%The macros to draw the grids
+%\initialGrid
+%\stabilizedInitialGrid
+%\cutGrid
+%\stabilizedCutGrid
+
 % Define text based macros
 \newcommand{\freeParticle}[1]{\ensuremath{v_{#1}}}
 \newcommand{\fixedParticle}[1]{\ensuremath{f_{#1}}}
