Figure with line

--- a/report/intro.tex
+++ b/report/intro.tex
@@ -1,1 +1,29 @@
 %!TEX root = report.tex
+
+\begin{figure}
+	\centering
+	\initialGrid
+	\caption{Caption here}
+	\label{fig:1:}
+\end{figure}
+
+\begin{figure}
+	\centering
+	\stabilizedInitialGrid
+	\caption{Caption here}
+	\label{fig:2:}
+\end{figure}
+
+\begin{figure}
+	\centering
+	\cutGrid
+	\caption{Caption here}
+	\label{fig:3:}
+\end{figure}
+
+\begin{figure}
+	\centering
+	\stabilizedCutGrid
+	\caption{Caption here}
+	\label{fig:4:}
+\end{figure}
