--- a/report/report.tex
+++ b/report/report.tex
@@ -2,6 +2,8 @@
 \usepackage[english]{babel}
 \usepackage{a4wide}
 
+\usepackage{ics}
+
 % Fonts
 \usepackage[sc]{mathpazo}
 \usepackage[T1]{fontenc}
