Zwarte strpen gefixt

--- a/report/intro.tex
+++ b/report/intro.tex
@@ -2,28 +2,36 @@
 
 \begin{figure}
 	\centering
-	\initialGrid
+	\resizebox{0.9\columnwidth}{!}{%
+		\initialGrid
+	}
 	\caption{Caption here}
 	\label{fig:1:}
 \end{figure}
 
 \begin{figure}
 	\centering
-	\stabilizedInitialGrid
+	\resizebox{0.9\columnwidth}{!}{%
+		\stabilizedInitialGrid
+	}
 	\caption{Caption here}
 	\label{fig:2:}
 \end{figure}
 
 \begin{figure}
 	\centering
-	\cutGrid
+	\resizebox{0.9\columnwidth}{!}{%
+		\cutGrid
+	}
 	\caption{Caption here}
 	\label{fig:3:}
 \end{figure}
 
 \begin{figure}
 	\centering
-	\stabilizedCutGrid
+	\resizebox{0.9\columnwidth}{!}{%
+		\stabilizedCutGrid
+	}
 	\caption{Caption here}
 	\label{fig:4:}
 \end{figure}
