--- a/report/intro.tex
+++ b/report/intro.tex
@@ -1,1 +1,3 @@
 %!TEX root = report.tex
+
+\todo[inline]{Write a nice introduction about mud and how it cracks. And balloons and how they rupture. Something something paper Vogel et al. and that his method is slow and we expect our method to work at least a lot faster.}
