--- a/report/method.tex
+++ b/report/method.tex
@@ -1,1 +1,4 @@
 %!TEX root = report.tex
+
+\todo{Story from the presentation. Different types of particles. Springs. How the particles are connected, with those springs (square uniform grid). Things like energy and what is a stable system?}
+
