Todos in verslag.

--- a/report/experiment.tex
+++ b/report/experiment.tex
@@ -1,1 +1,7 @@
 %!TEX root = report.tex
+
+\todo[inline]{Compare grid with and without grounding springs}
+
+\todo[inline]{Compare different methods of breaking}
+
+\todo[inline]{Compare different numbers of springs to break per step}
