--- a/report/report.tex
+++ b/report/report.tex
@@ -90,6 +90,9 @@
 \section{Experiments}
 \input{experiment.tex}	
 
+\section{Discussion}
+\input{discussion}
+
 \section{Conclusion}
 \input{conclusion.tex}
 
