--- a/report/intro.tex
+++ b/report/intro.tex
@@ -1,40 +1,46 @@
 %!TEX root = report.tex
 
 
-\todo[inline]{Write a nice introduction about mud and how it cracks. And balloons and how they rupture. Something something paper Vogel et al. and that his method is slow and we expect our method to work at least a lot faster.}
+\todo[inline]{Why is looking at the rupture dynamics of mud/paint useful. Give a nice example, e.g., the mona lisa.}
 
-\begin{figure}
-	\centering
-	\resizebox{0.9\columnwidth}{!}{%
-		\initialGrid
-	}
-	\caption{Caption here}
-	\label{fig:1:}
-\end{figure}
+\todo[inline]{How is this problem tackled before. E.g., Vogel et al. which models the rupture dynamics of mud in the following way: ... -> conclusion a slow but representative model/method.}
 
-\begin{figure}
-	\centering
-	\resizebox{0.9\columnwidth}{!}{%
-		\stabilizedInitialGrid
-	}
-	\caption{Caption here}
-	\label{fig:2:}
-\end{figure}
+\todo[inline]{Global idea of the model/method presented in this paper. ... -> hypothesis: fast but maybe not as a representative model and simulation of the crack dynamics of mud/paint.}
 
-\begin{figure}
-	\centering
-	\resizebox{0.9\columnwidth}{!}{%
-		\cutGrid
-	}
-	\caption{Caption here}
-	\label{fig:3:}
-\end{figure}
+\todo[inline]{Structure of the paper -> stuff like section x discusses blaat. etc. you know ;)}
 
-\begin{figure}
-	\centering
-	\resizebox{0.9\columnwidth}{!}{%
-		\stabilizedCutGrid
-	}
-	\caption{Caption here}
-	\label{fig:4:}
-\end{figure}
+% \begin{figure}
+% 	\centering
+% 	\resizebox{0.9\columnwidth}{!}{%
+% 		\initialGrid
+% 	}
+% 	\caption{Caption here}
+% 	\label{fig:1:}
+% \end{figure}
+
+% \begin{figure}
+% 	\centering
+% 	\resizebox{0.9\columnwidth}{!}{%
+% 		\stabilizedInitialGrid
+% 	}
+% 	\caption{Caption here}
+% 	\label{fig:2:}
+% \end{figure}
+
+% \begin{figure}
+% 	\centering
+% 	\resizebox{0.9\columnwidth}{!}{%
+% 		\cutGrid
+% 	}
+% 	\caption{Caption here}
+% 	\label{fig:3:}
+% \end{figure}
+
+% \begin{figure}
+% 	\centering
+% 	\resizebox{0.9\columnwidth}{!}{%
+% 		\stabilizedCutGrid
+% 	}
+% 	\caption{Caption here}
+% 	\label{fig:4:}
+% \end{figure}
